fix small layout issue on exclamation

--- a/src/app/frontend/assets/styles/modules/m-add-record.scss
+++ b/src/app/frontend/assets/styles/modules/m-add-record.scss
@@ -173,7 +173,7 @@
   color: white;
   padding: 3px 9px 0;
   display: block;
-  height: 24px;
+  height: 25px;
   float: right;
 }
 
